pom dependencies cleanup