@@ -22,150 +22,7 @@
         <jboss-fuse.version>6.1.1.redhat-412</jboss-fuse.version>
     </properties>
     
-    <!--
-    https://maven.repository.redhat.com/techpreview/all/org/drools/drools-karaf-features
-    https://repository.jboss.org/nexus/content/groups/ea/org/jboss/fuse/jboss-fuse-minimal/
-    https://github.com/jboss-integration/fuse-bxms-integ
-    https://github.com/jboss-integration/fuse-bxms-integ/blob/master/drools-osgi/drools-karaf-features/src/main/filtered-resources/repository/features.xml
-    -->
-
-        <!--
-	<repositories>
-		<repository>
-			<id>jboss-fuse-releases</id>
-			<url>https://repository.jboss.org/nexus/content/repositories/fs-releases/</url>
-		</repository>
-		<repository>
-            <id>jboss-fuse-download</id>
-            <url>https://repository.jboss.org/nexus/content/groups/ea</url>
-        </repository>
-	</repositories>
-        -->
-	<!-- 
-  <pluginRepositories>
-        <pluginRepository>
-            <id>central-plugins</id>
-            <url>http://repo1.maven.org/maven2</url>
-        </pluginRepository>
-    </pluginRepositories>
-    -->
-    
-	<!--build>
-		<resources>
-			<resource>
-				<directory>src/test/resources/properties</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-	</build-->
-    
-    
     <profiles>
-            <!--
-      <profile>
-          <id>coverage</id>
-          <activation>
-              <property>
-                  <name>coverage</name>
-                  <value>true</value>
-              </property>
-          </activation>
-          <build>
-            <plugins>
-              <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.3.201502191951</version>
-                <executions>
-                  <execution>
-                    <id>pre-integration-test</id>
-                    <phase>pre-integration-test</phase>
-                    <goals>
-                      <goal>prepare-agent-integration</goal>
-                    </goals>
-                    <configuration>
-                      <destFile>${project.build.directory}/coverage-data/jacoco.exec</destFile>
-                      <propertyName>failsafeArgLine</propertyName>
-                      <includes>
-                        <include>${project.build.directory}/../../services/billing-service/target/classes</include>
-                        <include>${project.build.directory}/../../contracts/billing-service/target/classes</include>
-                      </includes>
-                    </configuration>
-                  </execution>
-                  <execution>
-                    <id>post-integration-test</id>
-                    <phase>post-integration-test</phase>
-                    <goals>
-                      <goal>report</goal>
-                    </goals>
-                    <configuration>
-                      <dataFile>${project.build.directory}/coverage-data/jacoco.exec</dataFile>
-                      <outputDirectory>${project.reporting.outputDirectory}/coverage</outputDirectory>
-                    </configuration>
-                  </execution>
-                </executions>
-              </plugin>
-              -->
-                <!-- cobertura cannot execute goals separately, so you cant instrument in pre-int phase and report in post-int phase -->
-                  <!--
-                  <plugin>
-                      <groupId>org.codehaus.mojo</groupId>
-                      <artifactId>cobertura-maven-plugin</artifactId>
-                      <version>2.6</version>
-                      <executions>
-                          <execution>
-                              <id>instrument-classes</id>
-                              <phase>pre-integration-test</phase>
-                              <goals>
-                                  <goal>clean</goal>
-                                  <goal>instrument</goal>
-                              </goals>
-                              <configuration>
-                                  <instrumentation>
-                                    
-                                  </instrumentation>
-                                  <attach>true</attach>
-                              </configuration>
-                          </execution>
-                          <execution>
-                              <id>check-classes</id>
-                              <phase>post-integration-test</phase>
-                              <goals>
-                                  <goal>check</goal>
-                              </goals>
-                              <configuration>
-                                <check>
-                                    <branchRate>85</branchRate>
-                                    <lineRate>85</lineRate>
-                                    <haltOnFailure>true</haltOnFailure>
-                                    <totalBranchRate>85</totalBranchRate>
-                                    <totalLineRate>85</totalLineRate>
-                                    <packageLineRate>85</packageLineRate>
-                                    <packageBranchRate>85</packageBranchRate>
-                                </check>
-                              </configuration>
-                          </execution>
-                      </executions>
-                  </plugin>
-                  -->
-                  <!-- Add cobertura as dependency to the jetty-plugin (required for instrumented classes) -->
-                      <!--
-                  <plugin>
-                      <groupId>org.apache.maven.plugins</groupId>
-                      <artifactId>maven-fusecontainer-plugin</artifactId>
-                      <dependencies>
-                          <dependency>
-                              <groupId>org.codehaus.mojo</groupId>
-                              <artifactId>cobertura-maven-plugin</artifactId>
-                              <version>2.6</version>
-                              <type>jar</type>
-                          </dependency>
-                      </dependencies>
-                  </plugin>
-              </plugins>
-          </build>
-      </profile>
-                      -->
         <profile>
             <id>acceptance</id>
             <activation>
@@ -221,27 +78,24 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-fusecontainer-plugin</artifactId>
-                        <version>6.1.1.redhat-412</version>
+                        <version>${jboss-fuse.version}</version>
                         <configuration>
                             <clean>true</clean>
                             <debug>false</debug>
-                            <fuseHome>${project.build.directory}/container/jboss-fuse-${jboss-fuse.version}</fuseHome>
                             <timeout>90</timeout>
                             <properties>
                                 <org.ops4j.pax.url.mvn_org.ops4j.pax.url.mvn.localRepository>${user.home}/.m2/repository</org.ops4j.pax.url.mvn_org.ops4j.pax.url.mvn.localRepository>
                                 <org.ops4j.pax.url.mvn_org.ops4j.pax.url.mvn.repositories_append>,https://maven.repository.redhat.com/techpreview/all@id=drools.repo</org.ops4j.pax.url.mvn_org.ops4j.pax.url.mvn.repositories_append>
                             </properties>
-                                
                             <container>
                                 <groupId>org.jboss.fuse</groupId>
                                 <artifactId>jboss-fuse-minimal</artifactId>
                                 <version>${jboss-fuse.version}</version>
                                 <type>zip</type>
                             </container>
-                            
-                            <!-- 
+                            <!--
                             <commands>
-                                <command>shell:source mvn:org.jboss.super.fuse/features/1.0.0-SNAPSHOT/karaf/installer;</command>
+                                <command>shell:source mvn:com.redhat.quickstarts.brms6fuse/features/${project.version}/karaf/installer;</command>
                             </commands>
                             -->
                         </configuration>
@@ -265,112 +119,9 @@
                 </plugins>
             </build>
         </profile>
-        
-        <profile>
-            <id>brms</id>
-            <activation><activeByDefault>false</activeByDefault></activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.cargo</groupId>
-                        <artifactId>cargo-maven2-plugin</artifactId>
-                        <version>1.1.3</version>
-                        <executions>
-                            <execution>
-                                <id>start-rule-repository</id>
-                                <phase>pre-integration-test</phase>
-                                <goals>
-                                    <goal>start</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>stop-rule-repository</id>
-                                <!-- 
-                                <phase>post-integration-test</phase>
-                                 -->
-                                <phase>install</phase> <!-- so it stops after fuse, removing all the red-herring connection exceptions in the fuse log -->
-                                <goals>
-                                    <goal>stop</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <container>
-                                <containerId>tomcat7x</containerId>
-                                <!-- 
-                                tomcat -> http://repo1.maven.org/maven2/org/apache/tomcat/tomcat/7.0.35/tomcat-7.0.35.zip
-                                 -->
-                                <artifactInstaller>
-                                    <groupId>org.apache.tomcat</groupId>
-                                    <artifactId>tomcat</artifactId>
-                                    <version>7.0.59</version>
-				                </artifactInstaller>
-                                <output>target/logs/container.log</output>
-                                <log>target/logs/cargo-plugin.log</log>
-                                <timeout>120000</timeout>
-                                <systemProperties>
-                                    
-                                </systemProperties>
-                            </container>
-                            <configuration>
-								<properties>
-									<!--
-										-Dcom.sun.management.jmxremote.port=6000
-										-Dcom.sun.management.jmxremote.authenticate=false
-										-Dcom.sun.management.jmxremote.ssl=false
-										-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000 -Xnoagent
-									-->
-									<cargo.jvmargs>
-										-Xmx1024m
-										-XX:MaxPermSize=256m
-									</cargo.jvmargs>
-									<!-- 
-                                    <cargo.servlet.port>16080</cargo.servlet.port>
-                                    -->
-                                    <cargo.servlet.port>9000</cargo.servlet.port>
-								</properties>
-                                <configfiles>
-                                    <!--
-                                    <configfile>
-                                        <file>src/test/resources/tomcat-users.xml</file>
-                                        <todir>conf/</todir>
-                                        <tofile>tomcat-users.xml</tofile>
-                                    </configfile>
-                                    -->
-                                    <!--
-                                    <configfile>
-                                        <file>src/main/resources/server.xml</file>
-                                        <todir>conf/</todir>
-                                        <tofile>server.xml</tofile>
-                                    </configfile>
-                                    -->
-                                </configfiles>
-                                <deployables>
-                                    <deployable>
-                                        <groupId>org.sonatype.nexus</groupId>
-                                        <artifactId>nexus-webapp</artifactId>
-                                        <type>war</type>
-                                        <properties>
-                                            <context>nexus</context>
-                                        </properties>
-                                    </deployable>
-                                </deployables>
-                            </configuration>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
     </profiles>
 
     <dependencies>
-        <dependency>
-            <groupId>org.sonatype.nexus</groupId>
-            <artifactId>nexus-webapp</artifactId>
-            <version>2.11.1-01</version>
-            <type>war</type>
-        </dependency>
-
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -385,43 +136,6 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.2</version>
         </dependency>
-        <!--
-        <dependency>
-            <groupId>org.antlr</groupId>
-            <artifactId>antlr</artifactId>
-            <version>3.3</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-collections</groupId>
-            <artifactId>commons-collections</artifactId>
-            <version>3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>dom4j</groupId>
-            <artifactId>dom4j</artifactId>
-            <version>1.6.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.javassist</groupId>
-            <artifactId>javassist</artifactId>
-            <version>3.14.0-GA</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.transaction</groupId>
-            <artifactId>jta</artifactId>
-            <version>1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>3.3.2.GA</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>ejb3-persistence</artifactId>
-            <version>1.0.2.GA</version>
-        </dependency>
-        -->
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-java</artifactId>
@@ -460,79 +174,14 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
-        <!-- 
-        <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-core</artifactId>
-            <version>5.5.1.fuse-7-061</version>
-        </dependency>
-         -->
-        <!--
-        <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-        </dependency>
-        -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
-        <!--
-        <dependency>
-            <groupId>xerces</groupId>
-            <artifactId>xerces</artifactId>
-            <version>1.2.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk16</artifactId>
-            <version>1.45</version>
-        </dependency>
-        -->
-        <!--
-        <dependency>
-            <groupId>wsdl4j</groupId>
-            <artifactId>wsdl4j</artifactId>
-            <version>1.4</version>
-        </dependency>
-        <dependency>
-            <groupId>axis</groupId>
-            <artifactId>axis-wsdl4j</artifactId>
-            <version>1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>xmlunit</groupId>
-            <artifactId>xmlunit</artifactId>
-            <version>1.4</version>
-        </dependency>
-        -->
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
         </dependency>
-        <!--
-        <dependency>
-            <groupId>javax.jms</groupId>
-            <artifactId>jms</artifactId>
-            <version>1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-beanutils</groupId>
-            <artifactId>commons-beanutils</artifactId>
-            <version>1.6</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-            <version>1.4</version>
-        </dependency>
-        -->
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
@@ -543,6 +192,7 @@
             <artifactId>sshd-core</artifactId>
             <version>0.8.0</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>net.schmizz</groupId>
             <artifactId>sshj</artifactId>
@@ -563,6 +213,7 @@
             <artifactId>ognl</artifactId>
             <version>3.0.6</version>
         </dependency>
+        -->
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-ftp</artifactId>
